load("@aspect_rules_js//npm:defs.bzl", "npm_link_package")
load("@npm//:defs.bzl", "npm_link_all_packages")
load("@aspect_rules_ts//ts:defs.bzl", "ts_config", "ts_project")

npm_link_all_packages(name = "node_modules")

ts_config(
    name = "tsconfig",
    src = "tsconfig.json",
    visibility = ["//visibility:public"],
)

ts_project(
    name = "build",
    srcs = glob(["docs/**/*.ts"]),
    declaration = True,
    source_map = True,
    transpiler = "tsc",
    tsconfig = ":tsconfig",
    deps = [
        "//:node_modules",
    ],
    visibility = ["//visibility:public"],
)
